just updating the latest

--- a/.env
+++ b/.env
@@ -1,3 +1,9 @@
 GOOGLE_ID=818305910028-96u54vh28c2pe3u9uq5pikum7moukvok.apps.googleusercontent.com
 
 GOOGLE_CLIENT_SECRET=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
+
+MONGODB_URI=mongodb+srv://curriculum-admin:<05CMInIrdkoZzVNT>@cluster1.rhiwk5q.mongodb.net/?retryWrites=true&w=majority
+
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_URL_INTERNAL=http://localhost:3000
+NEXTAUTH_SECRET=
