--- a/.env
+++ b/.env
@@ -6,4 +6,4 @@ MONGODB_URI=mongodb+srv://curriculum-admin:<05CMInIrdkoZzVNT>@cluster1.rhiwk5q.m
 
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_URL_INTERNAL=http://localhost:3000
-NEXTAUTH_SECRET=
+NEXTAUTH_SECRET=dc8Hp3RO631oALKeKg6gJpRk5aLHlCQ2Kku0qyoSCqQ
