able to sign in now by updating credentials for google

--- a/.env
+++ b/.env
@@ -2,8 +2,13 @@ GOOGLE_ID=818305910028-96u54vh28c2pe3u9uq5pikum7moukvok.apps.googleusercontent.c
 
 GOOGLE_CLIENT_SECRET=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
 
-MONGODB_URI=mongodb+srv://curriculum-admin:<05CMInIrdkoZzVNT>@cluster1.rhiwk5q.mongodb.net/?retryWrites=true&w=majority
+
+MONGODB_URI=mongodb+srv://curriculum-admin:pFJ05P600nekDxGi@cluster1.rhiwk5q.mongodb.net/?retryWrites=true&w=majority
 
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_URL_INTERNAL=http://localhost:3000
 NEXTAUTH_SECRET=dc8Hp3RO631oALKeKg6gJpRk5aLHlCQ2Kku0qyoSCqQ
+
+# When you receive an error that denies you access to the database or won't let you log in
+# try copying and pasting the ID and Secret back into the .env file because sometimes there is 
+# a tiny user error
