added deployed website to readme

--- a/.env
+++ b/.env
@@ -5,8 +5,8 @@ GOOGLE_CLIENT_SECRET=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
 
 MONGODB_URI=mongodb+srv://curriculum-admin:pFJ05P600nekDxGi@cluster1.rhiwk5q.mongodb.net/?retryWrites=true&w=majority
 
-NEXTAUTH_URL=http://localhost:3000
-NEXTAUTH_URL_INTERNAL=http://localhost:3000
+NEXTAUTH_URL=https://share-prompts-4jbicxdk0-landen-walkers-projects.vercel.app/
+NEXTAUTH_URL_INTERNAL=https://share-prompts-4jbicxdk0-landen-walkers-projects.vercel.app/
 NEXTAUTH_SECRET=dc8Hp3RO631oALKeKg6gJpRk5aLHlCQ2Kku0qyoSCqQ
 
 # When you receive an error that denies you access to the database or won't let you log in
